--- a/ignite.temperature/Views/Home/Index.cshtml
+++ b/ignite.temperature/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         data.addColumn('number', 'Temperature');
       
         var options = {
-          title: 'Temperarture Readings',
+          title: 'Temperature Readings',
           curveType: 'function',
           legend: { position: 'bottom' },
           width: 900,
